@@ -35,6 +35,8 @@ public class CollisionPoint extends Point implements Positionable {
 	
 	private final int id;
 	private final ReadWriteLock positionChangeListenerLock;
+	private final Vector2 tmpSourceVector = new Vector2();
+	private final Vector2 tmpTargetVector = new Vector2();
 	
 	private List<PositionChangeListener> positionChangeListeners;
 	
@@ -154,6 +156,24 @@ public class CollisionPoint extends Point implements Positionable {
 		positionChangeListenerLock.writeLock().lock();
 		positionChangeListeners.remove(listener);
 		positionChangeListenerLock.writeLock().unlock();
+	}
+	
+	@Override
+	public void moveTowards(float x, float y, float speed) {
+		tmpSourceVector.set(getX(), getY());
+		tmpTargetVector.set(x, y);
+		Vector2 direction = tmpTargetVector.sub(tmpSourceVector).nor();
+		
+		float xComponent = speed * MathUtils.cosDeg(direction.angle());
+		float yComponent = speed * MathUtils.sinDeg(direction.angle());
+		tmpSourceVector.add(xComponent, yComponent);
+		
+		set(tmpSourceVector.x, tmpSourceVector.y);
+	}
+
+	@Override
+	public void moveTowards(Positionable positionable, float speed) {
+		moveTowards(positionable.getX(), positionable.getY(), speed);
 	}
 	
 	/**
